[backend] add command_action swagger API. add binary swagger API
